[GALLERY] Fix position of caption under screenshots when viewing each screenshot separately It's incorrect (aligned by left), and this looks a bit crooked. So align it by center instead.

--- a/static/css/default-skin/default-skin.css
+++ b/static/css/default-skin/default-skin.css
@@ -271,7 +271,7 @@ a.pswp__share--download:hover {
     color: #BBB; }
 
 .pswp__caption__center {
-  text-align: left;
+  text-align: center;
   max-width: 420px;
   margin: 0 auto;
   font-size: 13px;
